clusters/main/kubernetes/apps/freshrss/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
  annotations:
    volsync.backube/privileged-movers: "true"
